<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/lines_with_notes"
        android:orientation="horizontal" >
    </RelativeLayout>  
    
    <RelativeLayout
        android:id="@+id/UserPicture"
        android:layout_below="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_centerHorizontal="true"    
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/to_user_profile"
            android:src="@drawable/userpic" />
    </RelativeLayout>
    
     <ScrollView
         android:id="@+id/ScrollView1"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/UserPicture"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/roundgrayshape" >

        <LinearLayout           
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginRight="8dp"
        	android:layout_marginLeft="8dp"
            android:orientation="vertical" >
            <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" >
	            <TextView
			        android:layout_width="180dp"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:text="@string/song1" />
	             <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="20sp" 
			        android:text="@string/score1" />            
       		 </LinearLayout>
       		  <TextView
                    android:id="@+id/line2"
                    android:layout_width="280dp"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
       		 <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" > 
	            <TextView
			        android:layout_width="180dp"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 			        
			        android:text="@string/song2" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="20sp" 
			        android:text="@string/score2" />            
	        </LinearLayout>
	        <TextView
                    android:layout_width="280dp"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
        	<LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" >
	            <TextView
			        android:layout_width="180dp"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:text="@string/song3" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:layout_marginLeft="10dp"
			        android:text="@string/score3" />            
	        </LinearLayout>
	        <TextView
                    android:layout_width="280dp"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
	       	<LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" >
	            <TextView
			        android:layout_width="180dp"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:text="@string/song4" />
	            <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:layout_marginLeft="10dp"
			        android:text="@string/score4" />   			         
	        </LinearLayout>                     
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
       android:id="@+id/ButtonHolder"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_below="@+id/ScrollView1"
       android:layout_marginTop="55dp"
       android:layout_marginBottom="15dp"
       android:orientation="vertical" >
       <Button
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginRight="55dp"
	       android:layout_marginLeft="55dp"
	       android:layout_marginBottom="7dp"
	       android:background="@drawable/buttonorange"
	       android:textColor="@color/white"
	       android:textStyle="bold"
	       android:text="@string/play_now"
	       android:textSize="25sp"
	       android:onClick="goSongSelection" />
       <Button
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginRight="55dp"
	       android:layout_marginLeft="55dp"
	       android:layout_marginBottom="7dp"
	       android:background="@drawable/buttonorange"
	       android:textColor="@color/white"
	       android:textStyle="bold"
	       android:text="@string/music_store"
	       android:textSize="25sp" 
	       android:onClick="goMusicStore"/>
       <Button
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginRight="55dp"
	       android:layout_marginLeft="55dp"
	       android:layout_marginBottom="7dp"
	       android:background="@drawable/buttonorange"
	       android:textColor="@color/white"
	       android:textStyle="bold"
	       android:text="@string/log_out"
	       android:textSize="25sp" 
	       android:onClick="goMain"/>
     </LinearLayout>
    
    
</RelativeLayout>