<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange" >
    
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:onClick="goHome"
            android:src="@drawable/homesmall"
            android:contentDescription="@string/image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="8dp"
            android:onClick="toUserProfile"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/roundwhite" >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/nameView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/nameedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/emailView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/usernameView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>
    	<LinearLayout
    	    android:id="@+id/linear4"
    	    android:layout_below="@id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
               android:textColor="@color/black" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textSize="20sp" /> 
          </LinearLayout>   
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="28dp"
        android:background="@drawable/button2shape"
        android:textColor="@color/white"
        android:text="@string/create2" 
        android:onClick="logUserIn" />


</RelativeLayout>
