<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/lines_with_notes"
        android:orientation="horizontal" >
    </RelativeLayout>
    <ImageView
       android:id="@+id/image1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:layout_marginRight="22dp"
       android:layout_marginTop="10dp"
       android:contentDescription="@string/to_user_profile"
       android:onClick="goUserProfile"
       android:src="@drawable/user_60" />
    
    <RelativeLayout
        android:id="@+id/StarPicture"
        android:layout_below="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_centerHorizontal="true"    
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/to_user_profile"
            android:src="@drawable/staricon" />
    </RelativeLayout>
    
    
    <LinearLayout
       android:id="@+id/ButtonHolder"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_below="@+id/Results"
       android:layout_marginTop="35dp"
       android:layout_marginBottom="15dp"
       android:orientation="vertical" >
       <Button
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginRight="55dp"
	       android:layout_marginLeft="55dp"
	       android:layout_marginBottom="7dp"
	       android:background="@drawable/buttonorange"
	       android:textColor="@color/white"
	       android:textStyle="bold"
	       android:text="@string/new_song"
	       android:textSize="25sp"
	       android:onClick="goSongSelection" />
       <Button
	       android:layout_width="match_parent"
	       android:layout_height="35dp"
	       android:layout_marginRight="55dp"
	       android:layout_marginLeft="55dp"
	       android:layout_marginBottom="7dp"
	       android:background="@drawable/buttonorange"
	       android:textColor="@color/white"
	       android:textStyle="bold"
	       android:text="@string/play_again"
	       android:textSize="25sp" 
	       android:onClick="playAgain"/>
     </LinearLayout>

    <RelativeLayout
        android:id="@+id/Results"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StarPicture"
		android:background="@drawable/roundgrayshape"
		android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" >
        <TextView
            android:id="@+id/hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="notes hit "
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/StatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/hit"
            android:text="@string/percent"
            android:textSize="22sp" />
    </RelativeLayout>
    
</RelativeLayout>