<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/lines_with_notes"
        android:orientation="horizontal" >
    </RelativeLayout>
    <ImageView
       android:id="@+id/image1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:layout_marginRight="22dp"
       android:layout_marginTop="10dp"
       android:contentDescription="@string/to_user_profile"
       android:onClick="goUserProfile"
       android:src="@drawable/user_60" />
      
     <RelativeLayout
         android:id="@+id/MusicIcon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/menu"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="10dp" >
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="15dp"
             android:contentDescription="@string/to_user_profile"
             android:src="@drawable/piano" />
     </RelativeLayout>
     
     <SearchView
         android:id="@+id/searchView1"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/MusicIcon"
         android:background="@drawable/buttonorange"
         android:layout_centerHorizontal="true" >
     </SearchView>
    
     <ScrollView
        android:id="@+id/ScrollView1"        
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/roundgrayshape"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/searchView1" >
        <LinearLayout         
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
        	android:layout_marginLeft="8dp"
            android:orientation="vertical" >
           <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:onClick="toPlayMode"
	            android:orientation="horizontal" >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/song1"                  
                   android:textSize="20sp" />  
       		 </LinearLayout>
       		  <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
       		 <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" > 
	            <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:textSize="20sp" 
			        android:text="@string/song2" />        
	        </LinearLayout>
	         <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
        	<LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" >
	            <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:textSize="20sp" 
			        android:text="@string/song3" />        
	        </LinearLayout>
	         <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
			        android:layout_height="5dp"
                 	android:background="@drawable/bottomgray" />
	       <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:orientation="horizontal" >
	            <TextView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textSize="20sp" 
			        android:gravity="center"
			        android:text="@string/song4" />		         
	        </LinearLayout>                     
        </LinearLayout>
    </ScrollView>


   
</RelativeLayout>
