<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <Button
        android:id="@+id/sign_in"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttonorange"
        android:onClick="signUserIn"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonorange"
        android:onClick="createAccount"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/image"
        android:src="@drawable/conductopus_big" />

    <!--  
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/maestro"
        android:textColor="@color/gray"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:layout_toLeftOf="@+id/title"
        android:contentDescription="@string/image"
        android:src="@drawable/lines" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/title"
        android:contentDescription="@string/image"
        android:src="@drawable/lines" />
	-->

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/image"
        android:src="@drawable/maestro_title" />

</RelativeLayout>